Edited written content

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <!-- Service Subtitle -->
         <div class="services__subtitle-container">
           <h3 class="services__bracket">[</h3>
-          <h3 class="services__subtitle">Please note that final pricing is subject to individual requirements and genre of works<span class="services__subtitle-period">.</span></h3>
+          <h3 class="services__subtitle">Please note that final pricing is subject to individual requirements and genre of projects<span class="services__subtitle-period">.</span></h3>
           <h3 class="services__bracket">]</h3>
         </div>
         <!-- Service Text -->
@@ -305,13 +305,13 @@
           <h3 class="info__step step1">Step 1</h3>
           <p class="info__text">
             <b>When you email me, please include:</b>
-            <br />- Your work's word count.
+            <br />- Your project's word count.
             <br />- What it is you are writing, such as genre, subject, goal, desired outcomes, or anything else you'd like to share.
             <br />- Any questions you may have.
             <br />- If you wish, also share a little about yourself. Knowing something about you can help me better understand your writing.
-            <br /><br />- If your work is a book (about 10,000 words or more), please include the first chapter with your email. For anything below that, 
-            I will use your work's word count to help you decide what to send me. 
-            <br />I will use the first chapter to assess your work. I will also edit, for free, the first three pages, unless the word count is 
+            <br /><br />- If your project is a book (about 10,000 words or more), please include the first chapter with your email. For anything below that, 
+            I will use your project's word count to help you decide what to send me. 
+            <br />I will use the first chapter to assess your project. I will also edit, for free, the first three pages, unless the word count is 
             less than 10,000. Such cases will be determined on an individual basis. 
             <br />Once completed, the edited sample will be emailed to you so you can decide if you like my work.
           </p>       
@@ -334,21 +334,21 @@
           <h3 class="info__step step3">Step 3</h3>
           <p class="info__text">
             Payments are made through PayPal in sectional deposits. 
-            For example, an initial deposit based on 50% of your work's word count 
+            For example, an initial deposit based on 50% of your project's word count 
             must be paid before I begin the editing process. If you prefer, this deposit percentage can be reduced into thirds, or even 
-            fourths, depending on the size of your work. The contract also includes a clause for cancellation. If you or I needed to cancel 
+            fourths, depending on the size of your project. The contract also includes a clause for cancellation. If you or I needed to cancel 
             for whatever reason, I would refund you the amount equal to the word count that has not been edited and email you 
             whatever has been edited up to the point of cancellation. 
-            If no payment is received at any point, I will withhold the edited work. The contract further explains this process.
+            If no payment is received at any point, I will withhold the edited project. The contract further explains this process.
           </p>
         </div>
         <!-- Please Note -->
         <div class="info__steps-subsection">
           <h3 class="info__step misc">Please Note</h3>
           <p class="info__text">
-            I reserve the right to turn down your work if it is illegible or requires an editing process more extensive than what I offer. 
+            I reserve the right to turn down your project if it is illegible or requires an editing process more extensive than what I offer. 
             I would be happy to give you advice on how to improve your writing skills so you may return at a later date. If I edited your 
-            work before it was ready, it would result in a waste of your valuable time and money.
+            project before it was ready, it would result in a waste of your valuable time and money.
             <br /><br />I reserve the right to refuse to edit any illicit or overly sexual content. Romance is one thing, p*rn is another, 
             and I decide when that line is crossed. If you are uncertain about a particular scene, please let me know and I will 
             decide whether or not I am comfortable with its content.
