--- a/index.html
+++ b/index.html
@@ -362,17 +362,20 @@
     <!-- * Footer ***************************************************************************************** -->
     <footer class="footer">
       <a href="mailto:mjmanzella38@gmail.com" class="footer__link">mjmanzella38@gmail.com</a>
-      <p class="foot-par">Don't forget to check out my social links!</p>
+      <p class="foot-par">Don't forget to check out my LinkedIn Profile!</p>
       <ul class="social-list">
-        <!-- <li class="social-list__item">
-          <a class="social-list__link" href="#" target="_blank">
-            <i class="fab fa-instagram"></i>
-          </a>
-        </li> -->
         <!-- LinkedIn Link -->
         <li class="social-list__item">
           <a class="social-list__link" href="https://www.linkedin.com/in/maria-manzella/" target="_blank">
             <i class="fab fa-linkedin"></i>
+          </a>
+        </li>
+      </ul>
+      <p class="foot-par">Want a sample of my writing/editing skills?</p>
+      <ul class="social-list">
+        <li class="social-list__item">
+          <a class="social-list__link" href="https://docs.google.com/document/d/13j052KbuWDe1KaZRXHjK2CjYe2Kd5wCX/edit?usp=sharing&ouid=113202328209875453502&rtpof=true&sd=true" target="_blank">
+            <i class="fa fa-book"></i>
           </a>
         </li>
       </ul>
