--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
         </li>
       </ul>
       <p class="foot-par">Want a sample of my writing/editing skills?</p>
+      <!-- Sample Writing Link -->
       <ul class="social-list">
         <li class="social-list__item">
           <a class="social-list__link" href="https://docs.google.com/document/d/13j052KbuWDe1KaZRXHjK2CjYe2Kd5wCX/edit?usp=sharing&ouid=113202328209875453502&rtpof=true&sd=true" target="_blank">
