Add email link to Info section

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <div class="info__steps-subsection">
           <h3 class="info__step step1">Step 1</h3>
           <p class="info__text">
-            <b>When you email me, please include:</b>
+            <b>When you email me (<a href="mailto:mjmanzella38@gmail.com" class="about__link">mjmanzella38@gmail.com</a>), please include:</b>
             <br />- Your project's word count.
             <br />- What it is you are writing, such as genre, subject, goal, desired outcomes, or anything else you'd like to share.
             <br />- Any questions you may have.
